1.26γ追加時frontendデグレード修正
git-svn-id: svn+ssh://svn.osdn.jp/svnroot/saccubus/trunk@288 c31a3d4d-7098-419a-a5c4-0623780f6bbf